# Wheelotracker

./: .gitignore  .replit  README.md  advanced_parking_detector.py  app.py  app_fixed.py  camera_component.py  license_plate_detector.py  parking_config.json  parking_coordinates.txt  parking_detector.py  parking_log.csv  pyproject.toml  replit.md  utils.py
